--- a/index.html
+++ b/index.html
@@ -2,3 +2,4 @@
 <h1>modified by git code ---- revision 2 </h1>
 <h1>modified by git code ---- revision 3 </h1>
 <h1>modified by git code ---- revision 4 </h1>
+<h1>modified by git code and it's running properly ---- revision 4 </h1>
