--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h1>created in git for jenkins server </h1>
+<h1>fetched from git for jenkins server </h1>
 <h1>modified by git code ---- revision 2 </h1>
 <h1>modified by git code ---- revision 3 </h1>
 <h1>modified by git code ---- revision 4 </h1>
